--- a/index.html
+++ b/index.html
@@ -15,8 +15,42 @@
     <link rel="stylesheet" href="css/index.css">
     <!--main css file-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+        }
+        .video-background {
+            position: fixed;
+            right: 0;
+            bottom: 0;
+            min-width: 100%; 
+            min-height: 100%;
+            width: auto; 
+            height: auto;
+            z-index: -100;
+            background-size: cover;
+        }
+        .content {
+            position: relative;
+            z-index: 100;
+            background-color: rgba(255, 255, 255, 0.6);
+            padding: 20px;
+            border-radius: 5px;
+            top: 20px;
+            left: 20px;
+        }
+    </style>
+
 </head>
 <body>
+
+    <video playsinline autoplay muted loop class="video-background">
+        <source src="Video.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+
     <!--contains all the div-->
     <div id="all">
     <!--mouse  follower-->
@@ -77,7 +111,7 @@
             <!--Social Media Links end-->
             <div class="header-content">
                 <div class="header-content-box">
-                <div class="firstline"><span class="color">Arlo </span>Brown</div>
+                <div class="firstline"><span class="color">Inmerge </span>.io</div>
                 <div class="secondline">
                 I'm a
             <span class="txt-rotate color" data-period="1200"data-rotate='[ " Designer.", " Blogger.", " Freelancer." ]'></span>
@@ -91,7 +125,7 @@
             </div>
             <!--header image-->
             <div class="header-image">
-            <img src="images/man.jpg" alt="logo">
+            <!-- <img src="images/man.jpg" alt="logo"> -->
             </div>
             <!--header image end-->
         </div>
@@ -576,7 +610,7 @@
                     <img src="./images/icon-name.png" class="icon" alt="name-icon">
                     <div class="contact-info-icon-text">
                         <h6>Name</h6>
-                        <p>Arlo Brown</p>
+                        <p>Inmerge.io</p>
                   </div>
                 </div>
                 <div class="contect-info-content-line">
